# gh-audit

./: .audit-config.yaml.sample.swp  .gitignore  Dockerfile  README.md  audit-config.sample.yaml  audit-config.yaml.sample  install.sh  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: docker.yaml  release.yml
gh_auditor/: __main__.py  auditor.py  cli.py  config.py  github_client.py  html_report.py  org_settings.py  sarif_report.py  token_validator.py  tui.py
gh_auditor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gh_auditor/azure/: __init__.py  ado_client.py  ado_token_validator.py
pipeaudit/: __main__.py  action_runs.py  apps_and_tokens.py  auditor.py  cis_report.py  cli.py  config.py  github_client.py  html_report.py  identity.py  org_settings.py  rules.py  sarif_report.py  scoring.py  token_validator.py  trivy_advisory.py  tui.py  version.py
pipeaudit/azure/: __init__.py  ado_auditor.py  branch_policies.py  identity.py  pipeline_rules.py  project_settings.py  repo_security.py
tests/: test_ado_auditor.py  test_ado_client.py  test_ado_identity.py  test_ado_project_settings.py  test_ado_repo_security.py  test_apps_and_tokens.py  test_auditor.py  test_branch_policies.py  test_cis_report.py  test_config.py  test_config_ado.py  test_gitlab_auditor.py  test_gitlab_client.py  test_gitlab_group_settings.py  test_gitlab_identity.py  test_gitlab_repo_security.py  test_html_report.py  test_identity.py  test_org_settings.py  test_pipeline_rules.py  test_rules.py  test_sarif_report.py  test_scoring.py  test_token_validator.py
(+9 files in other folders)
