[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeaudit"
dynamic = ["version"]
description = "Audit CI/CD pipelines, branch protection, and security settings across GitHub and Azure DevOps"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "responses>=0.23",
]

[project.scripts]
pipeaudit = "pipeaudit.cli:main"

[project.urls]
Homepage = "https://github.com/accuknox/gh-audit"
Issues = "https://github.com/accuknox/gh-audit/issues"

[tool.setuptools.packages.find]
include = ["pipeaudit*"]
exclude = ["tests*", "res*"]

[tool.setuptools.dynamic]
version = {attr = "pipeaudit.version.__version__"}
